--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome to my page</h1>
+    <h1 style="color:red">welcome to my page</h1>
     <h2>hello</h2>
     Hello, World
 </body>
